--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,17 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* globals.css */
+
+/* Estilo para el modo oscuro */
+body {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+body.dark {
+  background-color: #1a202c; /* Fondo oscuro */
+  color: white; /* Color de texto claro */
+}
+
+/* Agrega estilos adicionales para el cambio de colores */
